--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Hidden Search</title>
   </head>
   <body>
-    <div class="search">
+    <div class="search active">
       <input type="text" class="input" placeholder="Type here please" />
       <button class="btn">
         <i class="fas fa-search"></i>
