--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="search active">
-      <input type="text" class="input" placeholder="Type here please" />
+      <input type="text" class="input" placeholder="Search..." />
       <button class="btn">
         <i class="fas fa-search"></i>
       </button>
